--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@ Here some my skills..</p>
 <li>Bootstrap</li>
 </ul>
 
-<p>Contact : <a href="mailto:sandippatel0098@gmail.com">sandippatel0098@gmail.com</a></p>
-&emsp; &emsp; &emsp; <p> &emsp; &nbsp; &emsp; &nbsp; &emsp; &nbsp; +91-7600000398</p>
+<p>Contact : <a href="mailto:sandippatel0098@gmail.com">sandippatel0098@gmail.com</a><br/>
+&emsp; &emsp; &emsp; &emsp; &nbsp; &emsp; &nbsp; &emsp; &nbsp; +91-7600000398</p>
       </section>
 
     </div>
