--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ Here some my skills..</p>
 </ul>
 
 <p>Contact : <a href="mailto:sandippatel0098@gmail.com">sandippatel0098@gmail.com</a><br/>
-&emsp; &emsp; &emsp; &emsp; &nbsp; &emsp; &nbsp; &emsp; &nbsp; +91-7600000398</p>
+&emsp; &emsp; &emsp; &emsp; +91-7600000398</p>
       </section>
 
     </div>
