--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <title>Sandip Ramani - Webdesigner</title>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Sandip Ramani  by sandipramani</title>
+    <meta name="author" content="Sandip Ramani">
+    <meta name="description" content="Website design and development">
+    <meta name="keywords" content="Website design and development">
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-dark.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -43,8 +46,9 @@ Here some my skills..</p>
 <ul>
 <li>PhotoShop</li>
 <li>CorelDraw</li>
-<li>HTML/CSS/CSS3</li>
+<li>HTML5/CSS3</li>
 <li>Javascript</li>
+<li>Jquery</li>
 <li>Bootstrap</li>
 </ul>
 
