--- a/index.html
+++ b/index.html
@@ -55,7 +55,13 @@ Here some my skills..</p>
 <p>Contact : <a href="mailto:sandippatel0098@gmail.com">sandippatel0098@gmail.com</a><br/>
 &emsp; &emsp; &emsp; &emsp; +91-7600000398</p>
       </section>
-
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<img title="Web Page Visitor" src="http://counter10.01counter.com/private/freecounterstat.php?c=0e6d192fe642faf5914397052c735717">
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
     
