--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ Here some my skills..</p>
 <br/>
 <br/>
 <br/>
-<img title="Web Page Visitor" src="http://counter10.01counter.com/private/freecounterstat.php">
+<img title="Web Page Visitor" src="http://counter10.01counter.com/private/freecounterstat.php?c=0e6d192fe642faf5914397052c735717">
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
     
